适配 API 接口，编写 API 文档
