# docs/swagger.json
@@ -6,7 +6,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/control/{action}": {
+        "/tmodloader/control/{action}": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -15,13 +15,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "control"
+                    "tmodloader"
                 ],
                 "summary": "服务器控制",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "[ start | stop | restart ]",
+                        "description": "[ start | stop | restart | update | install ]",
                         "name": "action",
                         "in": "path",
                         "required": true
@@ -31,21 +31,21 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/commonresp.Ok"
+                            "$ref": "#/definitions/comm.RespOk"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/commonresp.Err"
+                            "$ref": "#/definitions/comm.RespErr"
                         }
                     }
                 }
             }
         },
-        "/game/events": {
+        "/tmodloader/events": {
             "get": {
-                "description": "Event Type: [ SERVER_ACTIVE ]",
+                "description": "ReportEvent Type: [ SERVER_ACTIVE ]",
                 "consumes": [
                     "application/json"
                 ],
@@ -53,54 +53,29 @@
                     "application/json"
                 ],
                 "tags": [
-                    "game"
+                    "tmodloader"
                 ],
-                "summary": "查看当前事件",
+                "summary": "获取最近事件",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/gameresp.Events"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/core.ReportEvent"
+                            }
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/commonresp.Err"
+                            "$ref": "#/definitions/comm.RespErr"
                         }
                     }
                 }
             }
         },
-        "/game/players": {
-            "get": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "game"
-                ],
-                "summary": "查看当前玩家",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/gameresp.Players"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/commonresp.Err"
-                        }
-                    }
-                }
-            }
-        },
-        "/mod": {
+        "/tmodloader/mod": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -109,20 +84,20 @@
                     "application/json"
                 ],
                 "tags": [
-                    "mod"
+                    "tmodloader"
                 ],
-                "summary": "查看 Mods",
+                "summary": "查看 ModMap",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/modresp.Response"
+                            "$ref": "#/definitions/tmodloader.ModMap"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/commonresp.Err"
+                            "$ref": "#/definitions/comm.RespErr"
                         }
                     }
                 }
@@ -135,9 +110,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "mod"
+                    "tmodloader"
                 ],
-                "summary": "更新 Mods",
+                "summary": "更新 ModMap",
                 "parameters": [
                     {
                         "description": "body",
@@ -145,7 +120,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/modreq.Mods"
+                            "$ref": "#/definitions/tmodloader.ModMap"
                         }
                     }
                 ],
@@ -153,13 +128,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/commonresp.Ok"
+                            "$ref": "#/definitions/comm.RespOk"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/commonresp.Err"
+                            "$ref": "#/definitions/comm.RespErr"
                         }
                     }
                 }
@@ -172,9 +147,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "mod"
+                    "tmodloader"
                 ],
-                "summary": "添加 Mods",
+                "summary": "添加 ModMap",
                 "parameters": [
                     {
                         "description": "body",
@@ -182,7 +157,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/modreq.ModIds"
+                            "$ref": "#/definitions/tmodloader.ModMap"
                         }
                     }
                 ],
@@ -190,13 +165,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/commonresp.Ok"
+                            "$ref": "#/definitions/comm.RespOk"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/commonresp.Err"
+                            "$ref": "#/definitions/comm.RespErr"
                         }
                     }
                 }
@@ -209,9 +184,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "mod"
+                    "tmodloader"
                 ],
-                "summary": "删除 Mods",
+                "summary": "删除 ModMap",
                 "parameters": [
                     {
                         "description": "body",
@@ -219,7 +194,10 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/modreq.ModIds"
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
                         }
                     }
                 ],
@@ -227,19 +205,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/commonresp.Ok"
+                            "$ref": "#/definitions/comm.RespOk"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/commonresp.Err"
+                            "$ref": "#/definitions/comm.RespErr"
                         }
                     }
                 }
             }
         },
-        "/server_config": {
+        "/tmodloader/runtime/players": {
             "get": {
                 "consumes": [
                     "application/json"
@@ -248,20 +226,51 @@
                     "application/json"
                 ],
                 "tags": [
-                    "server_config"
+                    "tmodloader"
                 ],
-                "summary": "查看 Server Config",
+                "summary": "获取当前玩家",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/serverconfigresp.ServerConfig"
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/commonresp.Err"
+                            "$ref": "#/definitions/comm.RespErr"
+                        }
+                    }
+                }
+            }
+        },
+        "/tmodloader/server_config": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tmodloader"
+                ],
+                "summary": "获取 ServerConfig",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/tmodloader.ServerConfig"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/comm.RespErr"
                         }
                     }
                 }
@@ -274,9 +283,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "server_config"
+                    "tmodloader"
                 ],
-                "summary": "更新 Server Config",
+                "summary": "更新 ServerConfig",
                 "parameters": [
                     {
                         "description": "body",
@@ -284,7 +293,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/serverconfigreq.ServerConfig"
+                            "$ref": "#/definitions/tmodloader.ServerConfig"
                         }
                     }
                 ],
@@ -292,13 +301,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/commonresp.Ok"
+                            "$ref": "#/definitions/comm.RespOk"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/commonresp.Err"
+                            "$ref": "#/definitions/comm.RespErr"
                         }
                     }
                 }
@@ -306,18 +315,21 @@
         }
     },
     "definitions": {
-        "commonresp.Err": {
+        "comm.RespErr": {
             "type": "object",
             "properties": {
+                "code": {
+                    "type": "integer"
+                },
                 "detail": {
                     "type": "string"
                 }
             }
         },
-        "commonresp.Ok": {
+        "comm.RespOk": {
             "type": "object"
         },
-        "gameresp.Event": {
+        "core.ReportEvent": {
             "type": "object",
             "properties": {
                 "level": {
@@ -334,48 +346,33 @@
                 }
             }
         },
-        "gameresp.Events": {
-            "type": "object",
-            "properties": {
-                "events": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/gameresp.Event"
-                    }
-                }
-            }
-        },
-        "gameresp.Players": {
-            "type": "object",
-            "properties": {
-                "players": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
-        "model.Mod": {
+        "tmodloader.Mod": {
             "type": "object",
             "required": [
-                "enable",
-                "id",
-                "name"
+                "id"
             ],
             "properties": {
-                "enable": {
-                    "type": "boolean"
+                "config": {
+                    "type": "string"
                 },
                 "id": {
                     "type": "string"
                 },
                 "name": {
                     "type": "string"
+                },
+                "remark": {
+                    "type": "string"
                 }
             }
         },
-        "model.ServerConfig": {
+        "tmodloader.ModMap": {
+            "type": "object",
+            "additionalProperties": {
+                "$ref": "#/definitions/tmodloader.Mod"
+            }
+        },
+        "tmodloader.ServerConfig": {
             "type": "object",
             "properties": {
                 "auto_create": {
@@ -411,55 +408,6 @@
                 },
                 "world_name": {
                     "type": "string"
-                }
-            }
-        },
-        "modreq.ModIds": {
-            "type": "object",
-            "properties": {
-                "mod_ids": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
-        "modreq.Mods": {
-            "type": "object",
-            "properties": {
-                "mods": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Mod"
-                    }
-                }
-            }
-        },
-        "modresp.Response": {
-            "type": "object",
-            "properties": {
-                "mods": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.Mod"
-                    }
-                }
-            }
-        },
-        "serverconfigreq.ServerConfig": {
-            "type": "object",
-            "properties": {
-                "server_config": {
-                    "$ref": "#/definitions/model.ServerConfig"
-                }
-            }
-        },
-        "serverconfigresp.ServerConfig": {
-            "type": "object",
-            "properties": {
-                "server_config": {
-                    "$ref": "#/definitions/model.ServerConfig"
                 }
             }
         }
