# internal/server/model/serverconfig/serverconfigreq/server_config_req.go
@@ -1,7 +1,0 @@
-package serverconfigreq
-
-import "dst-run/internal/comm/model"
-
-type ServerConfig struct {
-	ServerConfig model.ServerConfig `json:"server_config"`
-}
