# internal/server/model/serverconfig/serverconfigresp/server_config_resp.go
@@ -1,7 +1,0 @@
-package serverconfigresp
-
-import "dst-run/internal/comm/model"
-
-type ServerConfig struct {
-	ServerConfig model.ServerConfig `json:"server_config"`
-}
